<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#d0fbff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="My Nano Degree Apps"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_spotify"
        android:id="@+id/btnSpotify"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/btnScores"
        android:layout_alignEnd="@+id/btnMyApp"
        android:background="@android:color/holo_green_light" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_scores"
        android:id="@+id/btnScores"
        android:layout_below="@+id/btnSpotify"
        android:layout_alignStart="@+id/btnLibrary"
        android:layout_alignEnd="@+id/btnMyApp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_green_light" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_library"
        android:id="@+id/btnLibrary"
        android:layout_below="@+id/btnScores"
        android:layout_alignStart="@+id/btnBuildIt"
        android:layout_alignEnd="@+id/btnMyApp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_green_light" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_buildit"
        android:id="@+id/btnBuildIt"
        android:layout_below="@+id/btnLibrary"
        android:layout_alignStart="@+id/btnReader"
        android:layout_alignEnd="@+id/btnMyApp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_green_light" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_xyz"
        android:id="@+id/btnReader"
        android:layout_below="@+id/btnBuildIt"
        android:layout_alignStart="@+id/btnMyApp"
        android:layout_alignEnd="@+id/btnMyApp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_green_light" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_capstone"
        android:id="@+id/btnMyApp"
        android:layout_below="@+id/btnReader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_red_light" />
</RelativeLayout>
